# rayyan-python-sdk

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  fulltext.txt  mypy.ini  nb.ipynb  pyproject.toml  rayyan-api.ipynb  requirements.txt  setup.cfg
.github/workflows/: publish-pypi.yaml  publish-testpypi.yaml
docs/: admin.md  duplicates.md  highlight.md  mendeley_connect.md  notes.md  rayyan.md  review.md  review_access.md  search.md  third_party_auth.md  user.md
rayyan/: __init__.py  admin.py  conf.py  duplicates.py  errors.py  highlight.py  mendeley_connect.py  mendey_connect.py  mylib.py  notes.py  paths.py  rayyan.py  request.py  review.py  review_access.py  search.py  stateless_request.py  third_party_auth.py  types.py  user.py
rayyan/reviews/: __init__.py  ai_screeners.py  articles.py  base.py  criteria.py  customizations.py  embeddings.py  exports.py  filters.py  fulltext.py  importers.py  metadata.py  questions.py  samples.py
