[metadata]
name = rayyan-sdk
version = 0.1
description = A Python SDK for Rayyan APIs.
long_description = file: README.md
url = https://www.rayyan.ai/
author = Rayyan Systems, Inc.
author_email = support@rayyan.ai
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
